--- a/Nammi Frontend/create-account.html
+++ b/Nammi Frontend/create-account.html
@@ -55,7 +55,7 @@
                     </form>
                     
                     <p class="account-toggle">
-                        Don't have an account? <a href="#">Create one</a>
+                        Don't have an account? <a href="welcome-screen.html">Create one</a>
                     </p>
                 </div>
             </div>
