--- a/Nammi Frontend/onboarding-1.html
+++ b/Nammi Frontend/onboarding-1.html
@@ -32,11 +32,11 @@
     <script src="js/main.js"></script>
     <script>
         document.querySelector('.next-btn').addEventListener('click', () => {
-            window.location.href = 'onboarding-2.html';
+            window.location.href = 'welcome-screen.html';
         });
         
         document.querySelector('.skip-btn').addEventListener('click', () => {
-            window.location.href = 'welcome.html';
+            window.location.href = 'create-account.html';
         });
     </script>
 </body>
