--- a/Nammi Frontend/index.html
+++ b/Nammi Frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nammi - Web3 Platform</title>
+    <title>Nammi | Web3 Platform</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/splash.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="app-container">
         <div class="splash-screen">
             <div class="logo-container">
-                <img src="images/Nnami-logo.png" alt="Nammi Logo" class="logo">
+                <img src="images/Nnami-logo.png" alt="Nammi_img Logo" class="logo">
             </div>
         </div>
     </div>
