--- a/Nammi Frontend/index.html
+++ b/Nammi Frontend/index.html
@@ -11,7 +11,7 @@
     <div class="app-container">
         <div class="splash-screen">
             <div class="logo-container">
-                <img src="images/Nnami-logo.png" alt="Nammi_img Logo" class="logo">
+                <img src="images/Nnami-logo.png" alt="Nammi Logo" class="logo">
             </div>
         </div>
     </div>
