--- a/Nammi Frontend/complete-registration.html
+++ b/Nammi Frontend/complete-registration.html
@@ -8,6 +8,7 @@
 </head>
 <body class="bg-white flex justify-center items-center h-screen">
     <div class="text-center p-6 max-w-md w-full">
+            <!-- Check mark -->
         <div class="flex justify-center items-center mb-6">
             <div class="w-20 h-20 flex items-center justify-center rounded-full bg-green-500">
                 <svg class="w-12 h-12 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
@@ -15,13 +16,16 @@
                 </svg>
                 </div>
             </div>
+                <!-- success-->
                 <h1 class="text-2xl font-bold text-gray-800">Registration Complete!</h1>
                 <h2 class="text-lg text-gray-600">Welcome to Nammi</h2>
+              <!--redirecting message  -->
+              <p class="text-gray-500 mt-4">You will be automatically redirected to<br>dashboard based on your selected role.</p>
+             <button onclick="redirectNow()" class="mt-6 px-6 py-3 bg-green-500 text-white font-semibold rounded-lg shadow-md hover:bg-green-600 transition duration-300">
+            Go to Dashboard
+        </button>
             </div>
-            
-            <div class="redirect-message">
-                <p class="text-gray-500 mt-4">You will be automatically redirected to<br>dashboard based on your selected role.</p>
-            </div>
+    
     <script src="js/main.js"></script>
     <script>
         // Automatically redirect after showing success message
