--- a/Nammi Frontend/forgot-password.html
+++ b/Nammi Frontend/forgot-password.html
@@ -4,36 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password - Nammi</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/forgot-password.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="app-container">
-        <div class="logo-container">
-            <img src="images/nammi-logo.svg" alt="Nammi" class="logo">
+<body class="bg-white flex flex-col justify-center items-center min-h-screen p-4">
+      <!--  logo area -->
+    <div class="mb-6">
+            <img src="images/nammi-logo.svg" alt="Nammi" class="w-24">
         </div>
 
-        <main class="content">
-            <h1>Forgot Password</h1>
-            
-            <p class="description">
-                We will send you a 4 digit code to verify your email address
-                (<span class="email">dsgnnammi@gmail.com</span>). Enter in the field below.
-            </p>
+          <!-- Content -->
+    <div class="w-full max-w-md bg-gray-100 shadow-lg rounded-lg p-6">
+          <h1 class="text-2xl font-bold text-gray-900 text-center">Forgot Password</h1>
 
-            <form id="resetForm" class="reset-form">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" 
-                           placeholder="Enter your email" required>
-                </div>
+        <p class="text-center text-gray-600 mt-2">
+            We will send you a 4-digit code to verify your email address 
+            (<span class="text-gray-800 font-semibold">dsgnnammi@gmail.com</span>).
+        </p>
 
-                <button type="submit" class="reset-btn">RESET PASSWORD</button>
-            </form>
+        <!-- Reset Password-->
+        <form id="resetForm" class="mt-6 space-y-4">
+            <div>
+                <label for="email" class="text-gray-700 font-medium">Email</label>
+                <input type="email" id="email" name="email" 
+                    class="w-full mt-1 px-4 py-2 border rounded-lg focus:ring-2 focus:ring-green-400" 
+                    placeholder="Enter your email" required>
+            </div>
 
-            <a href="login.html" class="back-link">Back To Login Page</a>
+            <button type="submit" class="w-full py-3 bg-green-500 text-white font-semibold rounded-lg shadow-md hover:bg-green-600 transition">
+                RESET PASSWORD
+            </button>
+        </form>
+
+        <!-- Back Link -->
+        <div class="text-center mt-4">
+            <a href="login.html" class="text-green-500 hover:underline">Back to Login Page</a>
         </div>
-    </div>
+</div>
+    
     <script src="js/forgot-password.js"></script>
 </body>
 </html>
