--- a/Nammi Frontend/index.html
+++ b/Nammi Frontend/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nammi | Web3 Platform</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/splash.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+    /*  fade in */
+        @keyframes fadeIn {
+            from { opacity: 0;}
+            to { opacity: 1;}
+        }
+        .fade-in {
+            animation: fadeIn 1.5s ease-in-out;
+    </style>
 </head>
-<body>
-    <div class="app-container">
-        <div class="splash-screen">
-            <div class="logo-container">
-                <img src="images/Nnami-logo.png" alt="Nammi Logo" class="logo">
-            </div>
-        </div>
+<body class="bg-white flex justify-center items-center min-h-screen">
+        <!--   splash screen container -->
+    <div class="w-full h-screen flex justify-center items-center fade-in">
+        <img src="images/Nnami-logo.png" alt="Nammi Logo" class="w-32">
     </div>
+
     <script src="js/main.js"></script>
     <script>
         // Automatically redirect to onboarding after splash screen
