--- a/Nammi Frontend/forgot-password.html
+++ b/Nammi Frontend/forgot-password.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password - Nammi</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body class="bg-white flex flex-col justify-center items-center min-h-screen p-4">
-      <!--  logo area -->
+    
+    <!-- Logo Area -->
     <div class="mb-6">
-            <img src="images/nammi-logo.svg" alt="Nammi" class="w-24">
-        </div>
+        <img src="images/nammi-logo.svg" alt="Nammi" class="w-24">
+    </div>
 
-          <!-- Content -->
+    <!-- Content -->
     <div class="w-full max-w-md bg-gray-100 shadow-lg rounded-lg p-6">
-          <h1 class="text-2xl font-bold text-gray-900 text-center">Forgot Password</h1>
+        <h1 class="text-2xl font-bold text-gray-900 text-center">Forgot Password</h1>
 
         <p class="text-center text-gray-600 mt-2">
-            We will send you a 4-digit code to verify your email address 
-            (<span class="text-gray-800 font-semibold">dsgnnammi@gmail.com</span>).
+            We will send you a 4-digit code to verify your email address.
         </p>
 
-        <!-- Reset Password-->
+        <!-- Reset Password Form -->
         <form id="resetForm" class="mt-6 space-y-4">
             <div>
                 <label for="email" class="text-gray-700 font-medium">Email</label>
@@ -39,8 +40,10 @@
         <div class="text-center mt-4">
             <a href="login.html" class="text-green-500 hover:underline">Back to Login Page</a>
         </div>
-</div>
-    
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="js/forgot-password.js"></script>
 </body>
 </html>
