--- a/Nammi Frontend/login.html
+++ b/Nammi Frontend/login.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In - Nammi</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <div class="screen">
@@ -13,18 +16,18 @@
             <h1 class="text-4xl font-bold mb-2">Log In</h1>
             <p class="text-gray-500 mb-8">Welcome back to Nammi</p>
             
-            <form>
+            <form id="loginForm">
                 <div class="mb-6">
-                    <label class="block text-gray-700 mb-2">Email</label>
-                    <input type="email" placeholder="johndoe@mail.com" class="input-field">
+                    <label for="login-email" class="block text-gray-700 mb-2">Email</label>
+                    <input type="email" id="login-email" placeholder="johndoe@mail.com" class="input-field" required>
                 </div>
                 
                 <div class="mb-8">
-                    <label class="block text-gray-700 mb-2">Password</label>
+                    <label for="login-password" class="block text-gray-700 mb-2">Password</label>
                     <div class="relative">
-                        <input type="password" class="input-field pr-12">
-                        <button type="button" class="absolute right-4 top-1/2 transform -translate-y-1/2">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <input type="password" id="login-password" class="input-field pr-12" required>
+                        <button type="button" id="togglePassword" class="absolute right-4 top-1/2 transform -translate-y-1/2">
+                            <svg xmlns="http://www.w3.org/2000/svg" id="eyeIcon" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
                             </svg>
@@ -41,5 +44,7 @@
             </p>
         </div>
     </div>
+
+    <script src="js/api.js"></script>
 </body>
-</html> 
+</html>
