--- a/Nammi Frontend/connect-wallet.html
+++ b/Nammi Frontend/connect-wallet.html
@@ -8,16 +8,16 @@
 </head>
 <body class="bg-white flex justify-center items-center min-h-screen p-4">
 
-    <div class="w-full max-w-md bg-gray-100 shadow-lg rounded-lg p-6">
+    <div class="w-full max-w-md bg-[#065A4D] shadow-lg rounded-lg p-6">
         <!-- Modal Header -->
-        <div class="flex justify-between items-center border-b pb-3">
+        <div class="flex justify-between items-center border-b border-white pb-3">
             <h2 class="text-xl font-bold text-gray-900">Connect a Wallet</h2>
-            <button class="text-gray-500 hover:text-red-500 text-2xl font-bold close-btn">&times;</button>
+            <button class="text-white hover:text-red-400 text-2xl font-bold close-btn">&times;</button>
         </div>
 
         <!-- Wallet Options -->
         <div class="mt-4 space-y-3">
-            <button class="wallet-option flex items-center justify-between w-full p-4 border rounded-lg bg-white hover:bg-green-100 transition">
+            <button class="wallet-option flex items-center justify-between w-full p-4 border  border-white rounded-lg bg-[#0ABF66] hover:bg-[#09985C] transition">
                 <div class="flex items-center space-x-3">
                     <img src="images/metamask-icon.svg" alt="MetaMask" class="w-8 h-8">
                     <span class="text-gray-700 font-medium">MetaMask</span>
@@ -25,7 +25,7 @@
                 <span class="text-gray-400 text-xl">›</span>
             </button>
 
-            <button class="wallet-option flex items-center justify-between w-full p-4 border rounded-lg bg-white hover:bg-green-100 transition">
+            <button class="wallet-option flex items-center justify-between w-full p-4 border border-white  rounded-lg  bg-[#0ABF66] hover:bg-[#09985C] transition">
                 <div class="flex items-center space-x-3">
                     <img src="images/coinbase-icon.svg" alt="CoinBase Wallet" class="w-8 h-8">
                     <span class="text-gray-700 font-medium">CoinBase Wallet</span>
@@ -33,7 +33,7 @@
                 <span class="text-gray-400 text-xl">›</span>
             </button>
 
-            <button class="wallet-option flex items-center justify-between w-full p-4 border rounded-lg bg-white hover:bg-green-100 transition">
+            <button class="wallet-option flex items-center justify-between w-full p-4 border  border-white rounded-lg bg-[#0ABF66] hover:bg-[#09985C] transition">
                 <div class="flex items-center space-x-3">
                     <img src="images/walletconnect-icon.svg" alt="WalletConnect" class="w-8 h-8">
                     <span class="text-gray-700 font-medium">WalletConnect</span>
@@ -41,7 +41,7 @@
                 <span class="text-gray-400 text-xl">›</span>
             </button>
 
-            <button class="wallet-option flex items-center justify-between w-full p-4 border rounded-lg bg-white hover:bg-green-100 transition">
+            <button class="wallet-option flex items-center justify-between w-full p-4 border  border-white rounded-lg bg-[#0ABF66] hover:bg-[#09985C]  transition">
                 <div class="flex items-center space-x-3">
                     <img src="images/keplr-icon.svg" alt="Keplr" class="w-8 h-8">
                     <span class="text-gray-700 font-medium">Keplr</span>
@@ -51,17 +51,17 @@
         </div>
 
         <!-- Footer -->
-        <div class="text-center mt-6">
+        <div class="text-center mt-6 text-sm">
             <h3 class="text-lg font-semibold text-gray-800">Connect a Wallet</h3>
             <p class="text-sm text-gray-500">By using Nammi, you agree to our<br>
-                <a href="#" class="text-green-500 hover:underline">Terms of Use</a> and 
-                <a href="#" class="text-green-500 hover:underline">Privacy Policy</a>
+                <a href="#" class="text-white hover:underline">Terms of Use</a> and 
+                <a href="#" class="text-white hover:underline">Privacy Policy</a>
             </p>
         </div>
 
         <!-- Action Button -->
         <div class="mt-6">
-            <button class="lets-go-btn w-full py-3 bg-green-500 text-white font-semibold rounded-lg shadow-md hover:bg-green-600 transition">
+            <button class="lets-go-btn w-full py-3 bg-white text-[#065A4D] font-semibold rounded-lg shadow-md hover:bg-gray-200 transition">
                 Let's Go
             </button>
         </div>
