--- a/Nammi Frontend/create-account.html
+++ b/Nammi Frontend/create-account.html
@@ -18,62 +18,100 @@
 </head>
 <body class="bg-white flex justify-center items-center min-h-screen p-4">
     
-    <div class="w-full max-w-md bg-gray-100 shadow-lg rounded-lg p-6">
+    <div class="w-full max-w-md bg-[#065A4D] text-white shadow-lg rounded-lg p-6">
         <!-- Header -->
         <div class="text-center">
-            <h1 class="text-2xl font-bold text-gray-900">Create an Account</h1>
-            <p class="text-gray-600 mt-1">Get started with Nammi today</p>
+            <h1 class="text-2xl font-bold">Create an Account</h1>
+            <p class="text-gray-200 mt-1">Get started with Nammi today</p>
         </div>
 
         <!-- Sign Up Buttons -->
         <div class="mt-4 space-y-3">
-            <!-- Google Sign-In -->
-            <div id="g_id_onload"
-                data-client_id="YOUR_GOOGLE_CLIENT_ID"
-                data-callback="handleGoogleCallback">
-            </div>
-            <div class="g_id_signin" data-type="standard"></div>
+            <!-- Google Sign-In Button -->
+<button onclick="googleLogin()" class="w-full flex items-center justify-center bg-white border py-2 rounded-lg shadow-sm hover:bg-gray-100 transition">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48">
+        <path fill="#4285F4" d="M44.5 20H24v8.5h11.9C34.1 34 29.6 38 24 38c-7.7 0-14-6.3-14-14s6.3-14 14-14c3.6 0 6.9 1.4 9.5 3.7l6.4-6.4C35.7 3 30.2 0 24 0 10.7 0 0 10.7 0 24s10.7 24 24 24c12.1 0 22-8.8 22-24 0-1.3-.1-2.7-.3-4z"/>
+        <path fill="#34A853" d="M6.8 14.6l5.3 3.9c1.5-3 4.9-5.1 8.9-5.1 2.7 0 5.2.9 7.1 2.5l5.2-5.2C29.6 5.6 24 4 18.2 4 11 4 4.9 8.6 1.5 14.6l5.3 3.9z"/>
+        <path fill="#FBBC05" d="M24 44c6.1 0 11.7-2 15.6-5.4l-5.5-4.3c-2.1 1.4-4.8 2.2-7.8 2.2-4 0-7.4-2.1-9.1-5.3l-5.3 4.1c2.8 5.7 8.7 9.7 15.1 9.7z"/>
+        <path fill="#EA4335" d="M44.5 20H24v8.5h11.9c-.8 4.3-4.7 7.5-9.3 7.5-1.6 0-3.2-.4-4.5-1.1l-5.3 4.1c2.7 2.6 6.2 4.2 10 4.2 5.8 0 11-3.7 13-9 1.4-3.3 1.8-7.7 1-11.2z"/>
+    </svg>
+    <span class="ml-2 text-gray-700 font-medium">Sign up with Google</span>
+</button>
 
-            <!-- Apple Sign-In -->
-            <button id="apple-signin-btn" onclick="handleAppleLogin()" class="w-full flex items-center justify-center bg-white border py-2 rounded-lg shadow-sm hover:bg-gray-100 transition">
-                <img src="images/apple-icon.svg" alt="Apple" class="w-5 h-5 mr-2">
-                <span class="text-gray-700 font-medium">Sign up with Apple</span>
-            </button>
+<!-- Apple Sign-In Button -->
+<button onclick="appleLogin()" class="w-full flex items-center justify-center bg-black text-white py-2 rounded-lg shadow-sm hover:bg-gray-800 transition">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white">
+        <path d="M16.51 3.87c-.91 1.06-2.43 1.88-3.83 1.76-.33-1.49.43-3.07 1.27-3.97C14.89.59 16.52 0 17.45 0c.06 1.52-.47 3.05-1.38 3.87zM21.96 17.98c-.55 1.29-.84 1.87-1.56 3.03-.99 1.55-2.39 3.47-4.14 3.48-1.53.01-1.92-.99-3.98-.98-2.06.01-2.49 1-4.02.99-1.75-.02-3.15-1.83-4.14-3.38-2.83-4.42-3.14-9.58-1.38-12.28 1.25-1.96 3.21-3.12 4.96-3.13 1.55-.02 3.02 1.05 3.98 1.05.95 0 2.66-1.3 4.48-1.11.76.03 2.91.3 4.29 2.3-.11.07-2.56 1.51-2.55 4.53.01 3.6 3.11 4.81 3.13 4.81z"/>
+    </svg>
+    <span class="ml-2 font-medium">Sign up with Apple</span>
+</button>
+
+<script>
+    function googleLogin() {
+        google.accounts.id.initialize({
+            client_id: "YOUR_GOOGLE_CLIENT_ID",
+            callback: handleGoogleCallback
+        });
+        google.accounts.id.prompt();
+    }
+
+    function handleGoogleCallback(response) {
+        console.log("Google OAuth Response:", response);
+        // Handle login response here
+    }
+
+    function appleLogin() {
+        AppleID.auth.init({
+            clientId: "YOUR_APPLE_CLIENT_ID",
+            scope: "name email",
+            redirectURI: "YOUR_REDIRECT_URI",
+            state: "YOUR_CUSTOM_STATE"
+        });
+
+        AppleID.auth.signIn().then(response => {
+            console.log("Apple OAuth Response:", response);
+            // Handle authentication response here
+        }).catch(error => {
+            console.error("Apple OAuth Error:", error);
+        });
+    }
+</script>
+
         </div>
 
         <!-- Divide -->
         <div class="flex items-center my-4">
             <div class="flex-grow border-t border-gray-300"></div>
-            <span class="px-2 text-gray-500 text-sm">OR</span>
+            <span class="px-2 text-gray-300 text-sm">OR</span>
             <div class="flex-grow border-t border-gray-300"></div>
         </div>
 
         <!-- Signup Form -->
         <form id="signupForm" class="space-y-4">
             <div>
-                <label for="email" class="text-gray-700 font-medium">Email</label>
-                <input type="email" id="email" class="w-full mt-1 px-4 py-2 border rounded-lg focus:ring-2 focus:ring-green-400" placeholder="johndoe@mail.com" required>
+                <label for="email" class="text-white font-medium">Email</label>
+                <input type="email" id="email" class="w-full mt-1 px-4 py-2 border rounded-lg text-gray-900 focus:ring-2 focus:ring-[#09985C]" placeholder="johndoe@mail.com" required>
             </div>
 
             <div>
                 <label for="password" class="text-gray-700 font-medium">Password</label>
                 <div class="relative">
-                    <input type="password" id="password" class="w-full mt-1 px-4 py-2 border rounded-lg focus:ring-2 focus:ring-green-400" placeholder="••••••••" required>
+                    <input type="password" id="password" class="w-full mt-1 px-4 py-2 border rounded-lg text-gray-900 focus:ring-2 focus:ring-focus:ring-[#09985C]" placeholder="••••••••" required>
                     <button type="button" class="absolute right-3 top-3 toggle-password">
                         <img src="images/eye-icon.svg" alt="Show password" class="w-5 h-5">
                     </button>
                 </div>
             </div>
 
-            <button type="submit" class="w-full py-3 bg-green-500 text-white font-semibold rounded-lg shadow-md hover:bg-green-600 transition">
+            <button type="submit" class="w-full py-3 bg-[#0ABF66] text-white font-semibold rounded-lg shadow-md hover:bg-[#09985C] transition">
                 Sign Up
             </button>
         </form>
 
         <!-- Already have an Account -->
-        <p class="text-center text-gray-600 mt-4">
+        <p class="text-center text-gray-200 mt-4">
             Already have an account? 
-            <a href="login.html" class="text-green-500 hover:underline">Log in</a>
+            <a href="login.html" class="text-white hover:underline">Log in</a>
         </p>
     </div>
 
